--- a/package.json
+++ b/package.json
@@ -4,6 +4,29 @@
   "description": "sharp monokai dark theme",
   "version": "0.0.1",
   "publisher": "MustafaEl-gaml",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MostafaElGamal/sharp-monokai"
+  },
+  "keywords": [
+    "theme",
+    "themes",
+    "dark themes",
+    "high themes",
+    "mustafaElGamal",
+    "mustafa-el Gamal",
+    "mustafa-elGaml",
+    "mustafa Elgaml",
+    "best theme",
+    "best dark theme",
+    "top dark theme",
+    "top theme",
+    "monokai themes",
+    "monokai theme",
+    "monokai",
+    "best monokai",
+    "top monokai"
+  ],
   "engines": {
     "vscode": "^1.77.0"
   },
