--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sharp-monokai",
-  "displayName": "Shap Monokai Dark Theme",
+  "displayName": "Sharp Monokai Dark Theme",
   "description": "sharp monokai dark theme",
   "version": "0.0.1",
   "publisher": "MustafaEl-gaml",
-  "icon": "./images/sharp_monokai_logo.png",
+  "icon": "sharp_monokai_logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/MostafaElGamal/sharp-monokai"
@@ -14,8 +14,6 @@
     "themes",
     "dark themes",
     "high themes",
-    "mustafaElGamal",
-    "mustafa-el Gamal",
     "mustafa-elGaml",
     "mustafa Elgaml",
     "best theme",
